--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
         android:allowBackup="true"
@@ -14,14 +15,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".WelcomeActivity"></activity>
+        <activity android:name=".Disabled_SignUpActivity" />
+        <activity android:name=".UserTypeActivity" />
+        <activity android:name=".Helper_SignUpActivity" />
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".HelperSignUpActivity" />
+        <activity android:name=".RequestsActivity" />
+        <activity android:name=".Supporter_SignUpActivity" />
+        <activity android:name=".ForgetPasswordActivity" />
+        <activity android:name=".GetPasswordActivity" />
+        <activity android:name=".CodeActivity"></activity>
     </application>
 
 </manifest>
